--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Mithran portfolio<br />
 						</h1>
-						<p>Data analyst skiiled in SQL, Tableau, and Excel</a></p>
+						<p>Data analyst skilled in SQL, Tableau, and Excel</a></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
