--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Covid analysis<br />
+										<h2>Covid analysis<br/>
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/covid.jfif" alt="" /></a>
+									<a href="https://public.tableau.com/app/profile/mithran.seralathan/viz/CovidCasestudy_16450818195670/Dashboard1?publish=yes" class="image fit"><img src="images/covid.jfif" alt="" /></a>
 									<p>Work in progess</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Comming soon</a></li>
+										<li><a href="https://public.tableau.com/app/profile/mithran.seralathan/viz/CovidCasestudy_16450818195670/Dashboard1?publish=yes" class="button">View project</a></li>
 									</ul>
 								</article>
 								<article>
