--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 										</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/mithran.seralathan/viz/CovidCasestudy_16450818195670/Dashboard1?publish=yes" class="image fit"><img src="images/covid.jfif" alt="" /></a>
-									<p>Work in progess</p>
+									<p>Covid 19 data exploration till february 2022 </p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/mithran.seralathan/viz/CovidCasestudy_16450818195670/Dashboard1?publish=yes" class="button">View project</a></li>
 									</ul>
