--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Mithran</title>
+		<title>Mithran portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -61,13 +61,13 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2>Covid analysis<br/>
+										<h2>Covid analysis<br />
 										</a></h2>
 									</header>
-									<a href="https://public.tableau.com/app/profile/mithran.seralathan/viz/CovidCasestudy_16450818195670/Dashboard1?publish=yes" class="image fit"><img src="images/covid.jfif" alt="" /></a>
-									<p>Covid 19 data exploration till february 2022 </p>
+									<a href="https://public.tableau.com/views/CovidCasestudy_16450818195670/Dashboard1?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/covid.jfif" alt="" /></a>
+									<p>Covid 19 data exploration till february 2022</p>
 									<ul class="actions special">
-										<li><a href="https://public.tableau.com/app/profile/mithran.seralathan/viz/CovidCasestudy_16450818195670/Dashboard1?publish=yes" class="button">View project</a></li>
+										<li><a href="https://public.tableau.com/views/CovidCasestudy_16450818195670/Dashboard1?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link" class="button">View project</a></li>
 									</ul>
 								</article>
 								<article>
