--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+@@ -0,0 +1,155 @@
 <!DOCTYPE HTML>
 <!--
 	Massively by HTML5 UP
@@ -21,7 +22,7 @@
 					<div id="intro">
 						<h1>Mithran portfolio<br />
 						</h1>
-						<p>Data analyst skilled in SQL, Tableau, and Excel</a></p>
+						<p>Data analyst skiiled in SQL, Tableau, and Excel</a></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -57,18 +58,17 @@
 								</ul>
 							</article>
 
-	
 						<!-- Posts -->
 							<section class="posts">
 								<article>
 									<header>
-										<h2>Covid analysis<br />
+										<h2><a href="#">Covid analysis<br />
 										</a></h2>
 									</header>
-									<a href="https://public.tableau.com/views/CovidCasestudy_16450818195670/Dashboard1?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/covid.jfif" alt="" /></a>
-									<p>Covid 19 data exploration till february 2022</p>
+									<a href="#" class="image fit"><img src="images/covid.jfif" alt="" /></a>
+									<p>Work in progess</p>
 									<ul class="actions special">
-										<li><a href="https://public.tableau.com/views/CovidCasestudy_16450818195670/Dashboard1?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link" class="button">View project</a></li>
+										<li><a href="#" class="button">Comming soon</a></li>
 									</ul>
 								</article>
 								<article>
