--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-@@ -0,0 +1,155 @@
 <!DOCTYPE HTML>
 <!--
 	Massively by HTML5 UP
@@ -20,23 +19,28 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Mithran portfolio<br />
-						</h1>
-						<p>Data analyst skiiled in SQL, Tableau, and Excel</a></p>
+						<h1>Mithran<br />
+						portfolio</h1>
+						<p> Entry level Data analyst skilled in SQL, Tableau, and Excel</a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
 					</div>
+
+				<!-- Header -->
+					<header id="header">
+						<a class="logo">Thanks for checking in! </a>
+					</header>
+
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">portfolio</a></li>
-						</ul>
+							<li class="active"><a>My portfolio</a></li>
+							</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/mithran-s-4b450b168/" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
 							<li><a href="https://github.com/MithranSeralathan" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="https://www.kaggle.com/mithranseralathan" class="icon brands alt fa-kaggle"><span class="label">Kaggle</span></a></li>
-							<li><a href="https://public.tableau.com/app/profile/mithran.seralathan#!/" class="icon brands alt fa-tableau-T"><span class="label">Tableau</span></a></li>
 						</ul>
 					</nav>
 
@@ -46,8 +50,8 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2>my first project : Cyclistic bike-share analysis(Dec 2020 - Nov 2021)<br/>
-									</a></h2>
+									<h2><a href="#">My first project<br />
+										Cyclistic bike-share analysis(Dec 2020 - Nov 2021)</a></h2>
 									<p>This case study serves as the capstone of the Google Data Analytics Professional Certificate
 										My goal was to answer the question: How do casual riders and annual members use Cyclistic bikes differently?</p>
 								</header>
@@ -62,18 +66,19 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Covid analysis<br />
-										</a></h2>
+										<h2><a>Covid 19 analysis<br />
+										Feb 2022</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/covid.jfif" alt="" /></a>
-									<p>Work in progess</p>
+									<a href="https://public.tableau.com/views/CovidCasestudy_16450818195670/Dashboard1?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/covid.jfif" alt="" /></a>
+									<p>I have to use the covid 19 database to showcase my Tableau and SQL skills, I hope you like it.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Comming soon</a></li>
+										<li><a href="https://public.tableau.com/views/CovidCasestudy_16450818195670/Dashboard1?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link" class="button">View project in tableau public</a></li>
+										<li><a href="https://github.com/MithranSeralathan/Covid_case_study_feb_22.git" class="button">View project in GitHub</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">My weight gain transferamtion analysis<br />
+										<h2><a href="#">My weight gain transformation analysis<br />
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/weight gain.jpg" alt="" /></a>
@@ -98,19 +103,19 @@
 										<h2><a href="#">Tableau profile<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/tableau.png" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/tol_devices.jpg" alt="" /></a>
 									<p>This holds my tableau's visualisation</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/mithran.seralathan" class="button">View profile</a></li>
 									</ul>
 								</article>
-							</section>
+				
+						<!-- Footer -->
 
-					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<section class="split contact">
+					<section class="split contact">
 							<section class="alt">
 								<h3>location</h3>
 								<p>Chennai, Tamil nadu<br />
@@ -135,7 +140,6 @@
 							</section>
 						</section>
 					</footer>
-
 				<!-- Copyright -->
 					<div id="copyright">
 						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
@@ -154,3 +158,4 @@
 
 	</body>
 </html>
+
